force-app/main/default/objects/Account/fields/Account_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Auto_Number__c</fullName>
    <label>Account Auto-Number</label>
    <type>AutoNumber</type>
</CustomField>