force-app/main/default/objects/Account/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <formula>Owner.FirstName &amp; &apos; &apos; &amp; Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Manager</label>
    <type>Text</type>
</CustomField>