force-app/main/default/objects/Account/fields/Account_Manager_s_Title__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_s_Title__c</fullName>
    <formula>Owner.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Manager&apos;s Position Title</label>
    <type>Text</type>
</CustomField>