force-app/main/default/objects/Account/fields/Am_I_coveraging_this_company__c.field-meta.xml
<CustomField>
    <fullName>Am_I_coveraging_this_company__c</fullName>
    <formula>CONTAINS(Ids_coverage__c, $User.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Am I coveraging this company?</label>
    <type>Checkbox</type>
</CustomField>