force-app/main/default/objects/Account/fields/bodyLongTextArea__c.field-meta.xml
<CustomField>
    <fullName>bodyLongTextArea__c</fullName>
    <label>bodyLongTextArea</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>