force-app/main/default/objects/Account/fields/Closed_Won_Opportunities_Average_Value__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Opportunities_Average_Value__c</fullName>
    <formula>Closed_Won_Opportunities_Value__c /  Closed_Won_Opportunities_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed-Won Opportunities Average Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>