force-app/main/default/objects/Account/fields/Count_of_Merchant_Ids__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Merchant_Ids__c</fullName>
    <label>Count of Merchant Ids</label>
    <summaryForeignKey>Merchant__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>