force-app/main/default/objects/Account/fields/Dependent_PickList_Test__c.field-meta.xml
<CustomField>
    <fullName>Dependent_PickList_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dependent PickList Test</label>
    <type>Checkbox</type>
</CustomField>