force-app/main/default/objects/Account/fields/EmailBody__c.field-meta.xml
<CustomField>
    <fullName>EmailBody__c</fullName>
    <label>EmailBody</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>