force-app/main/default/objects/Account/fields/Free_Field__c.field-meta.xml
<CustomField>
    <fullName>Free_Field__c</fullName>
    <label>Free Field</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>