force-app/main/default/objects/Account/fields/Ids_coverage__c.field-meta.xml
<CustomField>
    <fullName>Ids_coverage__c</fullName>
    <label>Ids coverage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>