force-app/main/default/objects/Account/fields/Number_Of_Employee__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Employee__c</fullName>
    <label>Number Of Employees</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Market_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-20</fullName>
            </value>
            <value>
                <fullName>21-50</fullName>
            </value>
            <value>
                <fullName>51-100</fullName>
            </value>
            <value>
                <fullName>101-250</fullName>
            </value>
            <value>
                <fullName>250-500</fullName>
            </value>
            <value>
                <fullName>500-1000</fullName>
            </value>
            <value>
                <fullName>1001-2000</fullName>
            </value>
            <value>
                <fullName>2001-5000</fullName>
            </value>
            <value>
                <fullName>5001-10000</fullName>
            </value>
            <value>
                <fullName>10000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>