force-app/main/default/objects/Account/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <label>Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>starter-plan</fullName>
            </value>
            <value>
                <fullName>pro-plan</fullName>
            </value>
            <value>
                <fullName>premium-plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>