force-app/main/default/objects/Account/fields/result__c.field-meta.xml
<CustomField>
    <fullName>result__c</fullName>
    <label>result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>