force-app/main/default/objects/Account/fields/Testing_Time__c.field-meta.xml
<CustomField>
    <fullName>Testing_Time__c</fullName>
    <label>Testing Time</label>
    <type>Time</type>
</CustomField>