force-app/main/default/objects/Account/fields/Upsells__c.field-meta.xml
<CustomField>
    <fullName>Upsells__c</fullName>
    <label>Upsells</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Dependent_PickList_Test__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>standard</fullName>
            </value>
            <value>
                <fullName>1800_accountant</fullName>
            </value>
            <value>
                <fullName>ein_business_docs_bundle</fullName>
            </value>
            <value>
                <fullName>corporate_docs</fullName>
            </value>
            <value>
                <fullName>ein_creation</fullName>
            </value>
            <value>
                <fullName>speed</fullName>
            </value>
            <value>
                <fullName>static_website</fullName>
            </value>
            <value>
                <fullName>zb_money_pro</fullName>
            </value>
            <value>
                <fullName>zb_banking_preferred</fullName>
            </value>
            <value>
                <fullName>operating_agreement</fullName>
            </value>
            <value>
                <fullName>worry_free_service</fullName>
            </value>
            <value>
                <fullName>registered_agent_service</fullName>
            </value>
            <value>
                <fullName>basic_email</fullName>
            </value>
            <value>
                <fullName>domain_name_privacy</fullName>
            </value>
            <value>
                <fullName>domain_name_reg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>