force-app/main/default/objects/Account/recordTypes/RecordTypeJUAN.recordType-meta.xml
<RecordType>
    <fullName>RecordTypeJUAN</fullName>
    <active>true</active>
    <label>RecordTypeJUAN</label>
</RecordType>