force-app/main/default/objects/Account/recordTypes/RecordTypeJUAN2.recordType-meta.xml
<RecordType>
    <fullName>RecordTypeJUAN2</fullName>
    <active>true</active>
    <label>RecordTypeJUAN2</label>
</RecordType>