force-app/main/default/objects/Account/recordTypes/RecordTypeJUAN3.recordType-meta.xml
<RecordType>
    <fullName>RecordTypeJUAN3</fullName>
    <active>true</active>
    <label>RecordTypeJUAN3</label>
</RecordType>