force-app/main/default/objects/Account/listViews/testing_list_View_sharing.listView-meta.xml
<ListView>
    <fullName>testing_list_View_sharing</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>testing list View sharing</label>
</ListView>